# edgeBoxes-Cpp-version

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  edgeBoxes.cpp  edgeBoxes_main.cpp  edgebox  edgebox.cbp  edgesChns.cpp  edgesDetect.cpp  edgesDetectMex.cpp  edgesNms.cpp  edgesNmsMex.cpp  gadgets.cpp  main.cpp  parameters.cpp  parts_localization  parts_localization.cpp  parts_localization_main.cpp
data/: 1bbs.csv  2bbs.csv  3bbs.csv  4bbs.csv  peppersbbs.csv
include/: model.h  sse.hpp  wrappers.hpp
matio/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool  matio.pc
matio/documentation/: Makefile  Makefile.in
matio/getopt/: Makefile  Makefile.in
matio/src/: Makefile  Makefile.in  matioConfig.h  matio_pubconf.h
matio/test/: Makefile  Makefile.in  atconfig  package.m4  testsuite
matio/test/datasets/: large_struct_compressed_le.mat  matio_test_cases.m  matio_test_cases_compressed_be.mat  matio_test_cases_compressed_le.mat  matio_test_cases_hdf_le.mat  matio_test_cases_uncompressed_be.mat  matio_test_cases_uncompressed_le.mat  small_v4_be.mat  small_v4_le.mat
matio/tools/: Makefile  Makefile.in
src/: edgeBoxes.cpp  edgeBoxes_main.cpp  edgesChns.cpp  edgesDetect.cpp  edgesDetect_main.cpp
tools/: ConvTri.cpp  convConst.cpp  gradient.cpp  gradientMex.cpp  imPadMex.cpp  rgbConvertMex.cpp  rotate.cpp
